--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -20,12 +20,14 @@
 
 Lista wydarzeń:<br />
 <ul>
-	<li ng-repeat="e in events">Nazwa: {{e.name}} {{e.type}}</li>
+	<li ng-repeat="e in events">{{e}} 
+	<button class="btn btn-primary" ng-click="findEventById(e.key.id)">Edytuj</button>
+	<button class="btn btn-danger" ng-click="deleteEventById(e.key.id)">Usuń</button></li>
 </ul>
 
 Dodaj wydarzenie: <br />
 <div class="userList container col-md-3">
-<form name="addEvent_form" ng-submit="addEvent(event)" class="form-horizontal input-border" novalidate>
+<form name="addEvent_form" ng-submit="createEvent(event)" class="form-horizontal input-border" novalidate>
  
     						<div ng-hide="hideMessage" ng-class="messageStyle">
 				                   {{message}}     
@@ -90,7 +92,32 @@ Dodaj wydarzenie: <br />
   							</div>
 						</div>
 					</div>
-				<div class="form-group">
+								
+			 <div class="form-group">
+        		<div class="col-sm-12">
+			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
+			    </div>
+    		 </div>
+    		 
+			<div class="form-group">
+        		<div class="col-sm-12">
+			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
+     			</div>
+    		</div>
+ 
+  			<div class="form-group">
+        		<div class="col-sm-12">
+			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
+			    </div>
+    		 </div>
+    		 
+			<div class="form-group">
+        		<div class="col-sm-12">
+			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
+     			</div>
+    		</div>
+    		
+    		<div class="form-group">
 						<div class="col-sm-12">
     						<input
     								class="form-control" 
@@ -119,33 +146,8 @@ Dodaj wydarzenie: <br />
 							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
   							</div>
 						</div>
-					</div>
+						</div>
 
-					
-			 <div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
-			    </div>
-    		 </div>
-    		 
-			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
-     			</div>
-    		</div>
- 
-  			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
-			    </div>
-    		 </div>
-    		 
-			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
-     			</div>
-    		</div>
-    		
     <button type="submit" class="btn btn-success btn-sm" ng-disabled="addEvent_form.$invalid">Utwórz wydarzenie</button>
 </form>
 </div>
@@ -160,13 +162,8 @@ Dodaj wydarzenie: <br />
     <!-- AngularJS -->
 	<script src="resources/js/lib/angularjs/angular.js"></script>
 	<script src="resources/js/lib/angularjs/angular-locale_pl-pl.js"></script>
-	<script src="resources/js/lib/angularjs/angular-resource.min.js"></script>
-	<script src="resources/js/lib/angularjs/angular-ui-router.min.js"></script>
-	<script src="resources/js/lib/angularjs/angular-local-storage.min.js"></script>
-	<script src="resources/js/lib/angularjs/angular-permission.js"></script>
 	<script src="resources/js/lib/angularjs/restangular.min.js"></script>
 	<script src="resources/js/lib/loading-bar.min.js"></script>
-	<script src="resources/js/lib/angular-base64.min.js"></script>
 	
 	<!-- UI-Boostrap -->
 	<script src="resources/js/lib/ui-bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
