--- a/src/main/webapp/WEB-INF/views/dashboard.html
+++ b/src/main/webapp/WEB-INF/views/dashboard.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link type="text/css" rel="stylesheet" href="resources/css/bootstrap/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="resources/css/font-awesome/css/font-awesome.min.css" />
@@ -16,25 +16,56 @@
 </head>
 
 <body ng-controller="EventsController">
-<div class="userList container col-md-3">
-<a href="logout">Wyloguj się</a>
+<!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Kalendarz wydarzeń</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav"> 
+  					<li><a ng-click="showTable()">Wydarzenia</a></li>
+  					<li><a ng-click="showAdd()">Dodaj wydarzenie</a></li>
+                    <li><a href="logout">Wyloguj się</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-Lista wydarzeń:<br />
+    <!-- Page Content -->
+    <div class="container">
 
-		 <table ng-table="tableParams" show-filter="true" class="table"> 
-		        <tr ng-repeat="event in $data">
-
-		            <td data-title="'Nazwa'" sortable="'name'" filter="{ 'name': 'text' }">{{event.name}}</td>
-		            <td data-title="'Miejsce'" sortable="'location'" filter="{ 'location': 'text' }">{{event.location}}</td>
-
-		            <td data-title="'Operacje'">
-		            	<a ng-click="findEventById(event.id)">Edytuj</a> 
-		            	<a ng-click="deleteEventById(event.id)">Usuń</a>
-		            </td>
-		        </tr>
-        </table>
-
-Dodaj wydarzenie: <br />
+        <div class="row">
+                <div ng-hide="hideTable" class="col-lg-12 text-center center">
+					 <table ng-table="tableParams" show-filter="true" class="table col-lg-12"> 
+					        <tr ng-repeat="event in $data">
+			
+					            <td data-title="'Nazwa'" sortable="'name'" filter="{ 'name': 'text' }">{{event.name}}</td>
+					            <td data-title="'Typ'" sortable="'type'" filter="{ 'type': 'text' }">{{event.type}}</td>
+					            <td data-title="'Miejsce'" sortable="'location'" filter="{ 'location': 'text' }">{{event.location}}</td>
+								<td data-title="'Data rozpoczęcia'" sortable="'startDate'">{{event.startDate  | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+					           	<td data-title="'Data zakończenia'" sortable="'endDate'">{{event.endDate  | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+					           	<td data-title="'Status'" sortable="'status'" filter="{ 'status': 'text' }">{{event.status}}</td>
+					            <td data-title="'Operacje'">
+					            	<button class="btn btn-warning" href="editEvent" ng-click="findEventById(event.id);showEdit()"><i class="fa fa-pencil-square-o"></i></button>
+					            	<button class="btn btn-danger" ng-click="deleteEventById(event.id)"><i class="fa fa-trash-o fa-lg"></i></button>
+					            </td>
+					        </tr>
+			        </table>
+				</div>
+				
+<div ng-hide="hideAdd" class="col-lg-4 text-center center">
+	Dodaj wydarzenie: <br />
 
 <form name="addEvent_form" ng-submit="createEvent(event)" class="form-horizontal input-border" novalidate>
  
@@ -159,15 +190,16 @@ Dodaj wydarzenie: <br />
 
     <button type="submit" class="btn btn-success btn-sm" ng-disabled="addEvent_form.$invalid">Utwórz wydarzenie</button>
 </form>
-
-Dodaj wydarzenie: <br />
+</div>
+<div ng-hide="hideEdit" class="col-lg-4 text-center center">
+	Edytuj wydarzenie: <br />
 
 <form name="addEvent_form" ng-submit="updateEvent(event)" class="form-horizontal input-border" novalidate>
  
     						<div ng-hide="hideMessage" ng-class="messageStyle">
 				                   {{message}}     
 				   			</div>
- 		<div class="form-group">
+ 					<div class="form-group">
 						<div class="col-sm-12">
     						<input
     								class="form-control" 
@@ -286,8 +318,18 @@ Dodaj wydarzenie: <br />
     <button type="submit" class="btn btn-success btn-sm" ng-disabled="addEvent_form.$invalid">Utwórz wydarzenie</button>
 </form>
 </div>
-	
-	
+
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+    
+     <footer class="footer">
+      <div class="container">
+        <p class="text-muted">&copy; 2015 Sebastian Sobiech, Mateusz Gotkowski</p>
+      </div>
+    </footer>
+
 	<!-- jQuery -->
     <script src="resources/js/lib/jquery/jquery-2.1.1.min.js"></script>
     
