--- a/src/main/webapp/WEB-INF/views/dashboard.html
+++ b/src/main/webapp/WEB-INF/views/dashboard.html
@@ -47,7 +47,7 @@
 
         <div class="row">
                 <div ng-hide="hideTable" class="col-lg-12 text-center center">
-					 <table ng-table="tableParams" show-filter="true" class="table col-lg-12"> 
+					 <table ng-table="tableParams" show-filter="true" class="table col-lg-12 table-condensed"> 
 					        <tr ng-repeat="event in $data">
 			
 					            <td data-title="'Nazwa'" sortable="'name'" filter="{ 'name': 'text' }">{{event.name}}</td>
@@ -65,41 +65,23 @@
 				</div>
 				
 <div ng-hide="hideAdd" class="col-lg-4 text-center center">
-	Dodaj wydarzenie: <br />
+	<h3>Dodaj wydarzenie</h3> <br />
 
-<form name="addEvent_form" ng-submit="createEvent(event)" class="form-horizontal input-border" novalidate>
+<form name="addEvent_form" ng-submit="createEvent(addEvent)" class="form-horizontal input-border" novalidate>
  
     						<div ng-hide="hideMessage" ng-class="messageStyle">
 				                   {{message}}     
 				   			</div>
- 		<div class="form-group">
+ 			<div class="form-group">
 						<div class="col-sm-12">
     						<input
     								class="form-control" 
     								type="text" 
             						placeholder="Nazwa" 
             						name="name" 
-            						ng-model="event.name" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
+            						ng-model="addEvent.name" 
             						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.name.$dirty && addEvent_form.name.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.name.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.name.$error.minlength
-							    && !addEvent_form.name.$error.maxlength
-							    && addEvent_form.name.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.name.$error.required 
-							    	&& addEvent_form.name.$error.minlength
-									|| addEvent_form.name.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
+
 						</div>
 					</div>
 					<div class="form-group">
@@ -109,51 +91,32 @@
     								type="text" 
             						placeholder="Typ" 
             						name="type" 
-            						ng-model="event.type" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
+            						ng-model="addEvent.type" 
             						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.type.$dirty && addEvent_form.type.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.type.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.type.$error.minlength
-							    && !addEvent_form.type.$error.maxlength
-							    && addEvent_form.type.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.type.$error.required 
-							    	&& addEvent_form.type.$error.minlength
-									|| addEvent_form.type.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
 						</div>
 					</div>
 								
 			 <div class="form-group">
         		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
+			      <input class="form-control" ng-model="addEvent.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
 			    </div>
     		 </div>
     		 
 			<div class="form-group">
         		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
+			      <input class="form-control" ng-model="addEvent.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
      			</div>
     		</div>
  
   			<div class="form-group">
         		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
+			      <input class="form-control" ng-model="addEvent.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
 			    </div>
     		 </div>
     		 
 			<div class="form-group">
         		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
+			      <input class="form-control" ng-model="addEvent.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
      			</div>
     		</div>
     		
@@ -164,159 +127,83 @@
     								type="text" 
             						placeholder="Miejsce" 
             						name="location" 
-            						ng-model="event.location" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
+            						ng-model="addEvent.location" 
             						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.type.$dirty && addEvent_form.type.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.type.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.type.$error.minlength
-							    && !addEvent_form.type.$error.maxlength
-							    && addEvent_form.type.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.type.$error.required 
-							    	&& addEvent_form.type.$error.minlength
-									|| addEvent_form.type.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
-						</div>
-						</div>
 
+					</div>
+		   </div>
     <button type="submit" class="btn btn-success btn-sm" ng-disabled="addEvent_form.$invalid">Utwórz wydarzenie</button>
 </form>
 </div>
 <div ng-hide="hideEdit" class="col-lg-4 text-center center">
-	Edytuj wydarzenie: <br />
-
-<form name="addEvent_form" ng-submit="updateEvent(event)" class="form-horizontal input-border" novalidate>
- 
-    						<div ng-hide="hideMessage" ng-class="messageStyle">
-				                   {{message}}     
-				   			</div>
- 					<div class="form-group">
-						<div class="col-sm-12">
-    						<input
-    								class="form-control" 
-    								type="text" 
-            						placeholder="Nazwa" 
-            						name="name" 
-            						ng-model="event.name" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
-            						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.name.$dirty && addEvent_form.name.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.name.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.name.$error.minlength
-							    && !addEvent_form.name.$error.maxlength
-							    && addEvent_form.name.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.name.$error.required 
-							    	&& addEvent_form.name.$error.minlength
-									|| addEvent_form.name.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
-						</div>
-					</div>
+<h3>Edytuj wydarzenie</h3> <br />
+		<form name="editEvent_form" ng-submit="updateEvent(event)" class="form-horizontal input-border" novalidate>
+		 
+		    				<div ng-hide="hideMessage" ng-class="messageStyle">
+						                   {{message}}     
+						   	</div>
+		 					<div class="form-group">
+								<div class="col-sm-12">
+		    						<input
+		    								class="form-control" 
+		    								type="text" 
+		            						placeholder="Nazwa" 
+		            						name="name" 
+		            						ng-model="event.name" 
+		            						required />
+		
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-sm-12">
+		    						<input
+		    								class="form-control" 
+		    								type="text" 
+		            						placeholder="Typ" 
+		            						name="type" 
+		            						ng-model="event.type" 
+		            						required />
+		       
+								</div>
+							</div>
+										
+					 <div class="form-group">
+		        		<div class="col-sm-12">
+					      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
+					    </div>
+		    		 </div>
+		    		 
 					<div class="form-group">
-						<div class="col-sm-12">
-    						<input
-    								class="form-control" 
-    								type="text" 
-            						placeholder="Typ" 
-            						name="type" 
-            						ng-model="event.type" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
-            						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.type.$dirty && addEvent_form.type.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.type.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.type.$error.minlength
-							    && !addEvent_form.type.$error.maxlength
-							    && addEvent_form.type.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.type.$error.required 
-							    	&& addEvent_form.type.$error.minlength
-									|| addEvent_form.type.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
-						</div>
-					</div>
-								
-			 <div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Data rozpoczęcia" bs-datepicker type="text" required>
-			    </div>
-    		 </div>
-    		 
-			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
-     			</div>
-    		</div>
- 
-  			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
-			    </div>
-    		 </div>
-    		 
-			<div class="form-group">
-        		<div class="col-sm-12">
-			      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
-     			</div>
-    		</div>
-    		
-    		<div class="form-group">
-						<div class="col-sm-12">
-    						<input
-    								class="form-control" 
-    								type="text" 
-            						placeholder="Miejsce" 
-            						name="location" 
-            						ng-model="event.location" 
-            						ng-minlength=5
-            						ng-maxlength=30 
-            						ng-pattern="/^[A-Z](?=[A-Z]|[a-z]|\s|\d)/"
-            						ng-model-options="{debounce: 1000}"
-            						required />
-            						
-            				<div class="error-container" ng-show="addEvent_form.type.$dirty && addEvent_form.type.$invalid">
-							    <small class="error-message" ng-show="addEvent_form.type.$error.required">
-							    	To pole nie może być puste.</small>
-							    <small class="error-message" ng-show="
-							    !addEvent_form.type.$error.minlength
-							    && !addEvent_form.type.$error.maxlength
-							    && addEvent_form.type.$error.pattern">
-							    	Musi zaczynać się od dużej litery oraz zawierać litery lub cyfry.</small>	
-							    <small class="error-message" ng-show="
-							    	!addEvent_form.type.$error.required 
-							    	&& addEvent_form.type.$error.minlength
-									|| addEvent_form.type.$error.maxlength">
-							    	Pole musi się składać z przynajmniej 5 i niewięcej niż 30 znaków.</small>
-  							</div>
-						</div>
-						</div>
-
-    <button type="submit" class="btn btn-success btn-sm" ng-disabled="addEvent_form.$invalid">Utwórz wydarzenie</button>
-</form>
+		        		<div class="col-sm-12">
+					      <input class="form-control" ng-model="event.startDate" data-autoclose="1" placeholder="Godzina rozpoczęcia" bs-timepicker type="text" required> 
+		     			</div>
+		    		</div>
+		 
+		  			<div class="form-group">
+		        		<div class="col-sm-12">
+					      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Data zakończenia" bs-datepicker type="text" required>
+					    </div>
+		    		 </div>
+		    		 
+					<div class="form-group">
+		        		<div class="col-sm-12">
+					      <input class="form-control" ng-model="event.endDate" data-autoclose="1" placeholder="Godzina zakończenia" bs-timepicker type="text" required> 
+		     			</div>
+		    		</div>
+		    		
+		    		<div class="form-group">
+								<div class="col-sm-12">
+		    						<input
+		    								class="form-control" 
+		    								type="text" 
+		            						placeholder="Miejsce" 
+		            						name="location" 
+		            						ng-model="event.location" 
+		            						required />
+								</div>
+					</div>		
+		    <button type="submit" class="btn btn-success btn-sm">Edytuj wydarzenie</button>
+		</form>
 </div>
 
         </div>
